ng/src/styles.css
/* IMPORTS */
@import url('https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css');
@import url('https://fonts.googleapis.com/css?family=Rubik:300,500,700');

.navbar,
h1,
h2,
h3,
h4,
h5,
h6,
p,
a {
	font-family: 'Rubik', sans-serif;
}

main {
	height: 100vh;
	width: 100vw;
}


/* NAVBAR */
.navbar {
	background-color: #F4F0DE;
	font-weight: 700;
}

.nav-link {
	font-weight: 300;
}

div > ul > li > a:hover {
	background-color: #eeeff0;
	border-radius: .25em;
}

nav > button:hover{
	background-color: #eeeff0;
}

